fix title spacing

--- a/packages/core/stories/styles/_markdown.scss
+++ b/packages/core/stories/styles/_markdown.scss
@@ -1,10 +1,9 @@
 
 @use "00-base/configure" as *;
 
-h1, h2, h3, h4, h5, h6 {
+h2, h3, h4, h5, h6 {
   margin-top: 1em !important;
   margin-bottom: 0.2em !important;
-
 }
 
 hr {
